--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Sanket Deshpande</title>
+		<title>Home | Sanket Deshpande</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,12 +20,15 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
+								<li><a href="no-sidebar.html">About Me</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">Successful Projects</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
+										<li><a href="#">Pixxel</a></li>
+										<li><a href="#">Project Apeiro</a></li>
+										<li><a href="#">Hyperloop India</a></li>
+										<li><a href="#">Project Mudra</a></li>
+										<!--
 										<li>
 											<a href="#">Phasellus consequat</a>
 											<ul>
@@ -35,13 +38,12 @@
 												<li><a href="#">Nisl sed aliquam</a></li>
 												<li><a href="#">Dolore adipiscing</a></li>
 											</ul>
+										-->
 										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="right-sidebar.html">Not-so-Successful Projects</a></li>
+								<li><a href="left-sidebar.html">Research</a></li>
 							</ul>
 						</nav>
 
@@ -61,28 +63,34 @@
 					I'm currently working on my thesis project with the <a href="http://www.ino.tifr.res.in/ino/">India-based Neutrino Observatory</a> (INO) group at<br>
 					Tata Institute of Fundamental Research (TIFR) and also leading the development of embedded systems for a nano-satellite at <a href="www.pixxel.co.in">Pixxel</a>.</p>
 					<p>Over 4 years of my undergraduate studies, I led a team to conduct India's first student-led near-space mission, <br>
-						helped found a braille-tech startup, developed a hyperloop pod and gave a TEDx talk. Some interesting pictures of this time: </p>
+						helped found a Braille-tech startup, developed a hyperloop pod and gave a TEDx talk. Some interesting pictures of this time: </p>
 
 				<!-- Slideshow container -->
 					<div class="slideshow-container">
 
 					  <!-- Full-width images with number and caption text -->
 					  <div class="mySlides fade">
-					    <div class="numbertext">1 / 3</div>
-					    <img src="images/pic01.jpg" style="width:100%">
-					    <div class="text">Caption Text</div>
+					    <div class="numbertext">1 / 4</div>
+					    <img src="images/slideshow/tedx.jpg" style="width:100%">
+					    <div class="text">Speaking at TEDx BITSGoa</div>
 					  </div>
 
 					  <div class="mySlides fade">
-					    <div class="numbertext">2 / 3</div>
-					    <img src="images/pic02.jpg" style="width:100%">
-					    <div class="text">Caption Two</div>
+					    <div class="numbertext">2 / 4</div>
+					    <img src="images/slideshow/apeiro.jpg" style="width:100%">
+					    <div class="text">Launch of Project Apeiro</div>
 					  </div>
 
 					  <div class="mySlides fade">
-					    <div class="numbertext">3 / 3</div>
-					    <img src="images/pic03.jpg" style="width:100%">
-					    <div class="text">Caption Three</div>
+					    <div class="numbertext">3 / 4</div>
+					    <img src="images/slideshow/hyperloop.jpg" style="width:100%">
+					    <div class="text">With the Hyperloop India team at SpaceX HQ, CA</div>
+					  </div>
+
+						<div class="mySlides fade">
+					    <div class="numbertext">4 / 4</div>
+					    <img src="images/slideshow/apeiro_hubli.jpeg" style="width:100%">
+					    <div class="text">Speaking at the press conference for Project Apeiro</div>
 					  </div>
 
 					  <!-- Next and previous buttons -->
@@ -96,6 +104,7 @@
 					  <span class="dot" onclick="currentSlide(1)"></span>
 					  <span class="dot" onclick="currentSlide(2)"></span>
 					  <span class="dot" onclick="currentSlide(3)"></span>
+						<span class="dot" onclick="currentSlide(4)"></span>
 					</div>
 
 			<!-- In the news -->
@@ -214,7 +223,7 @@
 							</div>
 							<div class="col-12">
 
-								<!-- Blog -->
+								<!-- Blog
 									<section>
 										<header class="major">
 											<h2>The Blog</h2>
@@ -254,7 +263,7 @@
 											</div>
 										</div>
 									</section>
-
+									-->
 							</div>
 						</div>
 					</div>
@@ -267,19 +276,20 @@
 							<div class="col-8 col-12-medium">
 								<section>
 									<header>
-										<h2>Blandit nisl adipiscing</h2>
+										<h2>My calendar</h2>
 									</header>
 									<ul class="dates">
 										<li>
-											<span class="date">Jan <strong>27</strong></span>
-											<h3><a href="#">Lorem dolor sit amet veroeros</a></h3>
-											<p>Ipsum dolor sit amet veroeros consequat blandit ipsum phasellus lorem consequat etiam.</p>
+											<span class="date">Jul <strong>8</strong></span>
+											<h3><a href="#">Travelling back to Mumbai</a></h3>
+											<p>Ending my trip to Bengaluru and getting back to Mumbai</p>
 										</li>
 										<li>
-											<span class="date">Jan <strong>23</strong></span>
-											<h3><a href="#">Ipsum sed blandit nisl consequat</a></h3>
-											<p>Blandit phasellus lorem ipsum dolor tempor sapien tortor hendrerit adipiscing feugiat lorem.</p>
+											<span class="date">Jul <strong>9</strong></span>
+											<h3><a href="#">First day of work</a></h3>
+											<p>Starting work on my thesis project at TIFR Mumbai</p>
 										</li>
+										<!--
 										<li>
 											<span class="date">Jan <strong>15</strong></span>
 											<h3><a href="#">Magna tempus lorem feugiat</a></h3>
@@ -295,10 +305,27 @@
 											<h3><a href="#">Blandit tempus aliquam?</a></h3>
 											<p>Feugiat sed tempus blandit tempus adipiscing nisl lorem ipsum dolor sit amet dolore.</p>
 										</li>
+										-->
 									</ul>
 								</section>
 							</div>
+
 							<div class="col-4 col-12-medium">
+								<section>
+									<header>
+										<h2>Reach me here</h2>
+									</header>
+									<h3> sanket@ieee.org </h3>
+									<br>
+									<ul class="social">
+										<li><a class="icon fa-facebook" href="#"><span class="label">Facebook</span></a></li>
+										<li><a class="icon fa-twitter" href="#"><span class="label">Twitter</span></a></li>
+										<!--<li><a class="icon fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>-->
+										<li><a class="icon fa-google-plus" href="#"><span class="label">Google Plus</span></a></li>
+										<li><a class="icon fa-linkedin" href="#"><span class="label">LinkedIn</span></a></li>
+									</ul>
+								</section>
+								<!--
 								<section>
 									<header>
 										<h2>What's this all about?</h2>
@@ -315,8 +342,11 @@
 										</ul>
 									</footer>
 								</section>
+								-->
 							</div>
+
 							<div class="col-4 col-6-medium col-12-small">
+								<!--
 								<section>
 									<header>
 										<h2>Tempus consequat</h2>
@@ -345,19 +375,24 @@
 										<li><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
 									</ul>
 								</section>
+								-->
 							</div>
 							<div class="col-4 col-12-medium">
+								<!--
 								<section>
 									<header>
-										<h2>Vitae tempor lorem</h2>
+										<h2>Reach me here</h2>
 									</header>
+									<h3> sanket@ieee.org </h3>
+									<br>
 									<ul class="social">
 										<li><a class="icon fa-facebook" href="#"><span class="label">Facebook</span></a></li>
 										<li><a class="icon fa-twitter" href="#"><span class="label">Twitter</span></a></li>
 										<li><a class="icon fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-										<li><a class="icon fa-tumblr" href="#"><span class="label">Tumblr</span></a></li>
+										<li><a class="icon fa-google-plus" href="#"><span class="label">Google Plus</span></a></li>
 										<li><a class="icon fa-linkedin" href="#"><span class="label">LinkedIn</span></a></li>
 									</ul>
+
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
@@ -376,14 +411,15 @@
 											<p>(800) 000-0000</p>
 										</li>
 									</ul>
-								</section>
+									-->
+
 							</div>
 							<div class="col-12">
 
 								<!-- Copyright -->
 									<div id="copyright">
 										<ul class="links">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Sanket Deshpande. All rights reserved.</li>
 										</ul>
 									</div>
 
