--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<li><a href="left-sidebar.html">Research</a></li>
 							</ul>
 						</nav>
-
+					</section>
 					<!-- Banner
 						<section id="banner">
 							<header>
@@ -56,13 +56,13 @@
 						</section>
 					-->
 				<section id="main">
-					<h2>Hi, I'm Sanket Deshpande</h2>
-					<p>I'm passionate about space and engineering projects which can impact society.<br>
-					I'm a fifth year student at Birla Institute of Technology and Science, Pilani (BITS Pilani)- Goa; <br>
+					<h2 align="center">Hi, I'm Sanket Deshpande</h2>
+					<p align="center">I'm a final year student at Birla Institute of Technology and Science, Pilani (<a href="http://www.bits-pilani.ac.in/Goa/">BITS Pilani</a>)- Goa; <br>
 					pursuing dual degrees in MSc. Physics and BE Electrical and Electronics Engineering. <br>
-					I'm currently working on my thesis project with the <a href="http://www.ino.tifr.res.in/ino/">India-based Neutrino Observatory</a> (INO) group at<br>
+					Currently, I'm working on my thesis project with the <a href="http://www.ino.tifr.res.in/ino/">India-based Neutrino Observatory</a> (INO) group at<br>
 					Tata Institute of Fundamental Research (TIFR) and also leading the development of embedded systems for a nano-satellite at <a href="www.pixxel.co.in">Pixxel</a>.</p>
-					<p>Over 4 years of my undergraduate studies, I led a team to conduct India's first student-led near-space mission, <br>
+					<p align="center">I'm passionate about space and engineering projects which can impact society.<br>
+					Over 4 years of my undergraduate studies, I led a team to conduct India's first student-led near-space mission, <br>
 						helped found a Braille-tech startup, developed a hyperloop pod and gave a TEDx talk. Some interesting pictures of this time: </p>
 
 				<!-- Slideshow container -->
@@ -124,7 +124,7 @@
 										<div class="row">
 											<div class="col-20 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/News/yourstory.png" alt="" /></a>
+													<a href="#" class="news featured"><img src="images/News/yourstory.png" alt="" /></a>
 													<!--
 													<header>
 														<h3>Ipsum feugiat et dolor</h3>
@@ -140,7 +140,7 @@
 											</div>
 											<div class="col-20 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/News/TheHindu.png" alt="" /></a>
+													<a href="#" class="news featured"><img src="images/News/TheHindu.png" alt="" /></a>
 													<!--
 													<header>
 														<h3>Sed etiam lorem nulla</h3>
@@ -156,7 +156,7 @@
 											</div>
 											<div class="col-20 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images//News/toi.jpeg" alt="" /></a>
+													<a href="#" class="news featured"><img src="images//News/toi.png" alt="" /></a>
 													<!--
 													<header>
 														<h3>Consequat et tempus</h3>
@@ -170,9 +170,10 @@
 												-->
 												</section>
 											</div>
+
 											<div class="col-20 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/News/dna.jpg" alt="" /></a>
+													<a href="#" class="news featured"><img src="images/News/dna.png" alt="" style="width:70%" align="middle"></a>
 													<!--
 													<header>
 														<h3>Blandit sed adipiscing</h3>
@@ -188,7 +189,7 @@
 											</div>
 											<div class="col-20 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/News/lokmat.png" alt="" /></a>
+													<a href="#" class="news featured"><img src="images/News/lokmat.png" alt="" /></a>
 													<!--
 													<header>
 														<h3>Etiam nisl consequat</h3>
