--- a/sproj.html
+++ b/sproj.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>About me | Sanket Deshpande</title>
+		<title>Successful Projects | SSD</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,8 +20,8 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li class="current"><a href="about.html">About Me</a></li>
-								<li>
+								<li><a href="about.html">About Me</a></li>
+								<li class="current">
 									<a href="sproj.html">Successful Projects</a>
 									<ul>
 										<li><a href="#">Pixxel</a></li>
@@ -56,41 +56,26 @@
 
 						<!-- Content -->
 							<article class="box post">
-								<center>
-									<img src="images/about/Sanket_1.jpg" style="width:30%" align="middle" alt="" />
-								</center>
 								<header>
-									<h2></h2>
-									<p>Just describing how I swept through life</p>
+									<h2>Successful Projects</h2>
+									<p>Describing my experience with working on a few ideas</p>
 								</header>
-								<p>
-									I'm currently living in the lively city of Mumbai, India. I was born in Vadodara, GJ and brought up in Aurangabad, MH.
-									I spent four years at Goa, where I did my undergraduate studies.
-								</p>
 
-								<p>
-
-								</p>
 								<section>
 									<header>
-										<h3>Something else</h3>
+										<h3>Project Apeiro</h3>
 									</header>
 									<p>
-										Elementum odio duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-										placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-										eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-										elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-										sit amet nullam consequat feugiat dolore tempus.
-										Elementum odio duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-										placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-										eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-										elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor.
+										<a href="http://projectapeiro.com/" alt=" ">Project Apeiro</a> is an experiment to determine cosmic ray flux
+										in the lower stratospheric regions of the atmosphere. It was conducted by deploying a cosmic ray detection system
+										on a High Altitude Balloon (HAB). The flight was successfully conducted on 2nd February, 2018.
 									</p>
 									<p>
-										Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-										eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-										elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-										sit amet nullam consequat feugiat dolore tempus.
+										I started working on this project in my first year of undergraduate education. We were a group of freshmen highly
+										motivated work on "some" space project. But, starting a student satellite mission seemed like an uphill task which
+										might have taken more time than the duration of our education. After a lot of searching, we arrived at the idea of
+										developing a near space experiment. This allowed us to work on a project with similar complexities of a space mission
+										while saving us from the lengthy and beauracratic process of a space mission.
 									</p>
 								</section>
 								<section>
@@ -111,11 +96,15 @@
 				</section>
 
 				<!-- Footer -->
+
 					<section id="footer">
 						<div class="container">
 							<div class="row">
+
 								<div class="col-8 col-12-medium">
+
 									<section>
+										<!--
 										<header>
 											<h2>My calendar</h2>
 										</header>
@@ -130,7 +119,7 @@
 												<h3><a href="#">First day of work</a></h3>
 												<p>Starting work on my thesis project at TIFR Mumbai</p>
 											</li>
-											<!--
+
 											<li>
 												<span class="date">Jan <strong>15</strong></span>
 												<h3><a href="#">Magna tempus lorem feugiat</a></h3>
