--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 										-->
 										</li>
 									</ul>
-								</li>
+								
 								<li><a href="right-sidebar.html">Not-so-Successful Projects</a></li>
 								<li><a href="left-sidebar.html">Research</a></li>
 							</ul>
@@ -124,7 +124,7 @@
 										<div class="row">
 											<div class="col-20 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="news featured"><img src="images/News/yourstory.png" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/News/yourstory.png" alt="" /></a>
 													<!--
 													<header>
 														<h3>Ipsum feugiat et dolor</h3>
@@ -140,7 +140,7 @@
 											</div>
 											<div class="col-20 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="news featured"><img src="images/News/TheHindu.png" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/News/TheHindu.png" alt="" /></a>
 													<!--
 													<header>
 														<h3>Sed etiam lorem nulla</h3>
@@ -156,7 +156,7 @@
 											</div>
 											<div class="col-20 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="news featured"><img src="images//News/toi.png" alt="" /></a>
+													<a href="#" class="image featured"><img src="images//News/toi.png" alt="" /></a>
 													<!--
 													<header>
 														<h3>Consequat et tempus</h3>
@@ -173,7 +173,7 @@
 
 											<div class="col-20 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="news featured"><img src="images/News/dna.png" alt="" style="width:70%" align="middle"></a>
+													<a href="#" class="image featured"><img src="images/News/dna.png" alt="" style="width:70%" align="middle"></a>
 													<!--
 													<header>
 														<h3>Blandit sed adipiscing</h3>
@@ -189,7 +189,7 @@
 											</div>
 											<div class="col-20 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="news featured"><img src="images/News/lokmat.png" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/News/lokmat.png" alt="" /></a>
 													<!--
 													<header>
 														<h3>Etiam nisl consequat</h3>
