Projects and publications updated

--- a/projects.html
+++ b/projects.html
@@ -61,15 +61,178 @@
 						</section>
 					-->
 				<section id="main">
-					<h2 align="center">Hi, I've worked on</h2>
-          <p></p>
-					<p align="center"><a href="veto.html">Veto Detector for Mini ICAL</a>: India-based Neutrino Observatory <br>
-                            <a href="pixxel.html">Pixxel</a>: Developing a constellation of nanosatellites to acquire satellie imagery <br>
-                            <a href="apeiro.html">Project Apeiro</a>: India's first student-led near-space microsatellite <br>
-                            <a href="hyperloop.html">Hyperloop India</a>: Bringing the hyperloop to India <br>
-                            <a href="mudra.html">Project Mudra</a>: Ed-tech startup building solutions for the visually impaired <br>
-                            <a href="grapes.html">Cosmic ray muon tracking</a>: Gamma Ray Astronomy PeV EnergieS phase-3 <br>
-                            <a href="antenna.html">Antenna design</a>: Design and simulation of a microstrip patch antenna
+
+					<div class="container">
+		        <div class="row">
+		          <div class="col-12">
+
+		            <!-- Portfolio -->
+		              <section>
+
+
+		                <div class="row">
+		                  <div class="col-20 col-6-medium col-12-small">
+		                    <section class="box">
+		                      <a href="#" class="image featured"><img src="images/Logos/tifr.png" alt="" style="width:80%" /></a>
+		                      <!--
+		                      <header>
+		                        <h3>Ipsum feugiat et dolor</h3>
+		                      </header>
+		                      <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+		                      <footer>
+		                        <ul class="actions">
+		                          <li><a href="#" class="button alt">Find out more</a></li>
+		                        </ul>
+		                      </footer>
+		                    -->
+		                    </section>
+		                  </div>
+		                  <div class="col-20 col-6-medium col-12-small">
+		                    <section class="box">
+		                      <a href="#" class="image featured"><img src="images/Logos/pixxel.png" style="width:90%" alt="" /></a>
+		                      <!--
+		                      <header>
+		                        <h3>Sed etiam lorem nulla</h3>
+		                      </header>
+		                      <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+		                      <footer>
+		                        <ul class="actions">
+		                          <li><a href="#" class="button alt">Find out more</a></li>
+		                        </ul>
+		                      </footer>
+		                    -->
+		                    </section>
+		                  </div>
+		                  <div class="col-20 col-6-medium col-12-small">
+		                    <section class="box">
+													<a href="#" class="image featured"><img src="images/Logos/apeiro.png" alt="" style="width:70%" /></a>
+
+		                      <!--
+		                      <header>
+		                        <h3>Consequat et tempus</h3>
+		                      </header>
+		                      <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+		                      <footer>
+		                        <ul class="actions">
+		                          <li><a href="#" class="button alt">Find out more</a></li>
+		                        </ul>
+		                      </footer>
+		                    -->
+		                    </section>
+		                  </div>
+
+		                  <div class="col-20 col-6-medium col-12-small">
+		                    <section class="box">
+		                      <a href="#" class="image featured"><img src="images/Logos/mudra.png" alt="" style="width:70%" align="middle"></a>
+		                      <!--
+		                      <header>
+		                        <h3>Blandit sed adipiscing</h3>
+		                      </header>
+		                      <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+		                      <footer>
+		                        <ul class="actions">
+		                          <li><a href="#" class="button alt">Find out more</a></li>
+		                        </ul>
+		                      </footer>
+		                      -->
+		                    </section>
+		                  </div>
+		                  <div class="col-20 col-6-medium col-12-small">
+		                    <section class="box">
+		                      <a href="#" class="image featured"><img src="images/Logos/hyperloop.png" alt="" style="width:100%" /></a>
+
+		                      <!--
+		                      <header>
+		                        <h3>Etiam nisl consequat</h3>
+		                      </header>
+		                      <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+		                      <footer>
+		                        <ul class="actions">
+		                          <li><a href="#" class="button alt">Find out more</a></li>
+		                        </ul>
+		                      </footer>
+		                    -->
+		                  </div>
+		                  <!--
+		                  <div class="col-4 col-6-medium col-12-small">
+		                    <section class="box">
+		                      <a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+		                      <header>
+		                        <h3>Dolore nisl feugiat</h3>
+		                      </header>
+		                      <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+		                      <footer>
+		                        <ul class="actions">
+		                          <li><a href="#" class="button alt">Find out more</a></li>
+		                        </ul>
+		                      </footer>
+		                    </section>
+		                  </div>
+		                  -->
+		                </div>
+		              </section>
+
+		          </div>
+		          <div class="col-12">
+
+		            <!-- Blog
+		              <section>
+		                <header class="major">
+		                  <h2>The Blog</h2>
+		                </header>
+		                <div class="row">
+		                  <div class="col-6 col-12-small">
+		                    <section class="box">
+		                      <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+		                      <header>
+		                        <h3>Magna tempus consequat</h3>
+		                        <p>Posted 45 minutes ago</p>
+		                      </header>
+		                      <p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit  adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+		                      <footer>
+		                        <ul class="actions">
+		                          <li><a href="#" class="button icon fa-file-text">Continue Reading</a></li>
+		                          <li><a href="#" class="button alt icon fa-comment">33 comments</a></li>
+		                        </ul>
+		                      </footer>
+		                    </section>
+		                  </div>
+		                  <div class="col-6 col-12-small">
+		                    <section class="box">
+		                      <a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+		                      <header>
+		                        <h3>Aptent veroeros aliquam</h3>
+		                        <p>Posted 45 minutes ago</p>
+		                      </header>
+		                      <p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit  adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+		                      <footer>
+		                        <ul class="actions">
+		                          <li><a href="#" class="button icon fa-file-text">Continue Reading</a></li>
+		                          <li><a href="#" class="button alt icon fa-comment">33 comments</a></li>
+		                        </ul>
+		                      </footer>
+		                    </section>
+		                  </div>
+		                </div>
+		              </section>
+		              -->
+		          </div>
+		        </div>
+		      </div>
+
+					<p align="center"><a href="veto.html">Veto Detector Design</a>: Simulation and hardware design; Mini ICAL at India-based Neutrino Observatory <br>
+														<br>
+														<a href="pixxel.html">Pixxel</a>: Aiming to design, build and launch India's first earth-observation nanosatellite constellation 	 <br>
+														<br>
+														<a href="apeiro.html">Project Apeiro</a>: Near space experiment to determine cosmic ray flux in lower-stratospheric regions <br>
+														<br>
+														<a href="hyperloop.html">Hyperloop India</a>: Built and tested a Hyperloop pod to participate in SpaceX Pod Competition 2017<br>
+														<br>
+                            <a href="mudra.html">Project Mudra</a>: Braille dicta-teacher device which enables learning, reading and writing with Braille <br>
+														<br>
+                            <a href="grapes.html">Cosmic ray muon tracking</a>: Trajectory plot of cosmic ray muons detected at the GRAPES-3 observatory<br>
+														<br>
+														<a href="antenna.html">Antenna design</a>: Design and simulation of a microstrip patch antenna for compact commercial devices
           </p>
 
 
@@ -77,163 +240,7 @@
 
 
 			<!-- In the news -->
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
 
-            <!-- Portfolio -->
-              <section>
-
-
-                <div class="row">
-                  <div class="col-20 col-6-medium col-12-small">
-                    <section class="box">
-                      <a href="#" class="image featured"><img src="images/Logos/tifr.png" alt="" style="width:80%" /></a>
-                      <!--
-                      <header>
-                        <h3>Ipsum feugiat et dolor</h3>
-                      </header>
-                      <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                      <footer>
-                        <ul class="actions">
-                          <li><a href="#" class="button alt">Find out more</a></li>
-                        </ul>
-                      </footer>
-                    -->
-                    </section>
-                  </div>
-                  <div class="col-20 col-6-medium col-12-small">
-                    <section class="box">
-                      <a href="#" class="image featured"><img src="images/Logos/pixxel.jpg" style="width:60%" alt="" /></a>
-                      <!--
-                      <header>
-                        <h3>Sed etiam lorem nulla</h3>
-                      </header>
-                      <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                      <footer>
-                        <ul class="actions">
-                          <li><a href="#" class="button alt">Find out more</a></li>
-                        </ul>
-                      </footer>
-                    -->
-                    </section>
-                  </div>
-                  <div class="col-20 col-6-medium col-12-small">
-                    <section class="box">
-
-                      <a href="#" class="image featured"><img src="images/Logos/hyperloop.png" alt="" style="width:100%" /></a>
-                      <!--
-                      <header>
-                        <h3>Consequat et tempus</h3>
-                      </header>
-                      <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                      <footer>
-                        <ul class="actions">
-                          <li><a href="#" class="button alt">Find out more</a></li>
-                        </ul>
-                      </footer>
-                    -->
-                    </section>
-                  </div>
-
-                  <div class="col-20 col-6-medium col-12-small">
-                    <section class="box">
-                      <a href="#" class="image featured"><img src="images/Logos/mudra.png" alt="" style="width:70%" align="middle"></a>
-                      <!--
-                      <header>
-                        <h3>Blandit sed adipiscing</h3>
-                      </header>
-                      <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                      <footer>
-                        <ul class="actions">
-                          <li><a href="#" class="button alt">Find out more</a></li>
-                        </ul>
-                      </footer>
-                      -->
-                    </section>
-                  </div>
-                  <div class="col-20 col-6-medium col-12-small">
-                    <section class="box">
-                      <a href="#" class="image featured"><img src="images/Logos/apeiro.png" alt="" style="width:70%" /></a>
-
-                      <!--
-                      <header>
-                        <h3>Etiam nisl consequat</h3>
-                      </header>
-                      <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                      <footer>
-                        <ul class="actions">
-                          <li><a href="#" class="button alt">Find out more</a></li>
-                        </ul>
-                      </footer>
-                    -->
-                  </div>
-                  <!--
-                  <div class="col-4 col-6-medium col-12-small">
-                    <section class="box">
-                      <a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
-                      <header>
-                        <h3>Dolore nisl feugiat</h3>
-                      </header>
-                      <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                      <footer>
-                        <ul class="actions">
-                          <li><a href="#" class="button alt">Find out more</a></li>
-                        </ul>
-                      </footer>
-                    </section>
-                  </div>
-                  -->
-                </div>
-              </section>
-
-          </div>
-          <div class="col-12">
-
-            <!-- Blog
-              <section>
-                <header class="major">
-                  <h2>The Blog</h2>
-                </header>
-                <div class="row">
-                  <div class="col-6 col-12-small">
-                    <section class="box">
-                      <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-                      <header>
-                        <h3>Magna tempus consequat</h3>
-                        <p>Posted 45 minutes ago</p>
-                      </header>
-                      <p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit  adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
-                      <footer>
-                        <ul class="actions">
-                          <li><a href="#" class="button icon fa-file-text">Continue Reading</a></li>
-                          <li><a href="#" class="button alt icon fa-comment">33 comments</a></li>
-                        </ul>
-                      </footer>
-                    </section>
-                  </div>
-                  <div class="col-6 col-12-small">
-                    <section class="box">
-                      <a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
-                      <header>
-                        <h3>Aptent veroeros aliquam</h3>
-                        <p>Posted 45 minutes ago</p>
-                      </header>
-                      <p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit  adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
-                      <footer>
-                        <ul class="actions">
-                          <li><a href="#" class="button icon fa-file-text">Continue Reading</a></li>
-                          <li><a href="#" class="button alt icon fa-comment">33 comments</a></li>
-                        </ul>
-                      </footer>
-                    </section>
-                  </div>
-                </div>
-              </section>
-              -->
-          </div>
-        </div>
-      </div>
 			<!-- Main -->
 
 
