--- a/publications.html
+++ b/publications.html
@@ -66,8 +66,7 @@
                             Dual Band Antenna for Portable Consumer Devices, Shruti Joshi, Sanket Deshpande and Sudeep Baudha <br>
                             12th European Union Conference on Antennas and Propagation (EuCAP) 2018 [pdf]</p>
 
-          <p align="center"><img src="images/Publications/Sanket_NSPDI.jpg" style="width:20%"><br>
-                            Airborne system for determining cosmic ray flux, Sanket Deshpande, Lucky N. Kapoor, Shivangi Kamat and Satyanarayana Bheesette <br>
+          <p align="center">Airborne system for determining cosmic ray flux, Sanket Deshpande, Lucky N. Kapoor, Shivangi Kamat and Satyanarayana Bheesette <br>
                             Poster at 3rd National Symposium on Particles, Detectors and Instrumentation (NSPDI) 2017 </p>
 
           <p align="center">Embedded system for an airborne payload to determine cosmic ray flux, Sanket Deshpande, Lucky N. Kapoor, Satyanarayana Bheesette and Ravindra R. Shinde <br>
